	PR c++/54506 	* decl.c (move_signature_fn_p): Split out from move_fn_p. 	* method.c (process_subob_fn): Use it. 	* cp-tree.h: Declare it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@191140 138bc75d-0d04-0410-961f-82ee72b054a4